# PetCpp

./: README.md
CardMagic/: Board.cpp  Board.hpp  Card.cpp  Card.hpp  CardCreator.hpp  CardDatabase.cpp  CardDatabase.hpp  Command.cpp  Command.hpp  CommandLine.cpp  CommandLine.hpp  Creature.cpp  Creature.hpp  Game.cpp  Game.hpp  GameError.hpp  Makefile  ManaPool.cpp  ManaPool.hpp  Messages.cpp  Messages.hpp  Player.cpp  Player.hpp  README.md  Spell.cpp  Spell.hpp  Utils.cpp  Utils.hpp  main.cpp
CardMagic/data/: creatures.txt  spells.txt
DND/: Armor.cpp  Armor.hpp  AttackCommand.cpp  AttackCommand.hpp  Character.cpp  Character.hpp  Command.hpp  CommandParser.cpp  CommandParser.hpp  Consumable.cpp  Consumable.hpp  DisplayPlayer.cpp  DisplayPlayer.hpp  Dungeon.cpp  Dungeon.hpp  Enemy.cpp  Enemy.hpp  Entity.cpp  Entity.hpp  Exceptions.hpp  Field.cpp  Field.hpp  Functions.cpp  Functions.hpp  Game.cpp  Game.hpp  HelpCommand.cpp  HelpCommand.hpp  InventoryCommand.cpp  InventoryCommand.hpp  Item.hpp  LootCommand.cpp  LootCommand.hpp  Makefile  MapCommand.cpp  MapCommand.hpp  MoveCommand.cpp  MoveCommand.hpp  PlayCommand.cpp  PlayCommand.hpp  (+21 more)
DND/configs/: story_config.txt
NavMesh/: .gitignore  CMakeLists.txt  README.md
NavMesh/apps/bench/: main.cpp
NavMesh/apps/viewer/: draw.cpp  draw.hpp  main.cpp  ui.cpp  ui.hpp
NavMesh/build-wsl/: .ninja_deps  .ninja_log  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  bench  build.ninja  cmake_install.cmake  tests  viewer
NavMesh/data/levels/: maze.json  pillars.json  rooms.json  stress.json
NavMesh/include/nav/: builder.hpp  level.hpp  mesh.hpp  nav.hpp  offset.hpp  query.hpp  types.hpp
NavMesh/src/nav/: astar.cpp  astar.hpp  builder.cpp  funnel.cpp  funnel.hpp  geometry.cpp  geometry.hpp  level.cpp  mesh.cpp  offset.cpp  query.cpp  triangulate.cpp  triangulate.hpp
NavMesh/tests/: test_astar.cpp  test_funnel.cpp  test_geometry.cpp  test_mesh.cpp  test_triangulate.cpp
NavMesh/tools/: plot_bench.py
SciFiSim/: .gitignore  CMakeLists.txt  README.md
SciFiSim/apps/balance/: main.cpp
SciFiSim/apps/game/: main.cpp
SciFiSim/data/: content.json
SciFiSim/include/sim/: contentloader.hpp  types.hpp  world.hpp
SciFiSim/src/sim/: contentloader.cpp  save.cpp  world.cpp
SciFiSim/tests/: test_main.cpp
SciFiSim/tools/: plot.py
SciFiSim/v1.0.0/: CMakeLists.txt
SciFiSim/v1.0.0/apps/game/: main.cpp
SciFiSim/v1.0.0/data/: content.json
SciFiSim/v1.0.0/include/sim/: contentloader.hpp  types.hpp  world.hpp
SciFiSim/v1.0.0/src/sim/: contentloader.cpp  world.cpp
SciFiSim/v1.0.0/tests/: test_main.cpp
